--- a/src/webinar.pug
+++ b/src/webinar.pug
@@ -23,29 +23,35 @@ block content
 		.container.container--small
 			.webinar__text-block
 				p.webinar__text На вебинаре эксперты рассказали о практике мультипродуктового оператора в области маркировки товаров, поделились опытом операционной работы и подготовки к новым этапам маркировки (оборудование + расходники, топология склада, ограничения). Слушателям были даны рекомендации по взаимодействию для получения оптимальных условий.
-				p.webinar__text Вы так же можете направить интересующие Вас вопросы на почту
+				p.webinar__text Вы так же можете направить интересующие Вас вопросы через
 					|
 					|
-					strong webinar@mjr.ru
+					a(href="#section-contacts", data-scroll-to="section-contacts").webinar__form-link форму обратной связи
 					|. Наши эксперты подготовят ответ.
 				.webinar__expert-list
 					h2.webinar__expert-title Эксперты вебинара
 					.webinar__expert-grid
 						.webinar__expert
 							.webinar__expert-photo-box
-								img.webinar__expert-photo(src="images/webinar/photo.png")
+								img.webinar__expert-photo(src="images/webinar/photo1.jpg")
 							.webinar__expert-description
 								p.webinar__expert-name Петр Соколов
 								p.webinar__expert-job Руководитель
 						.webinar__expert
 							.webinar__expert-photo-box
-								img.webinar__expert-photo(src="images/webinar/photo.png")
+								img.webinar__expert-photo(src="images/webinar/photo1.jpg")
 							.webinar__expert-description
 								p.webinar__expert-name Петр Соколов
 								p.webinar__expert-job Руководитель
 						.webinar__expert
 							.webinar__expert-photo-box
-								img.webinar__expert-photo(src="images/webinar/photo.png")
+								img.webinar__expert-photo(src="images/webinar/photo1.jpg")
+							.webinar__expert-description
+								p.webinar__expert-name Петр Соколов
+								p.webinar__expert-job Руководитель
+						.webinar__expert
+							.webinar__expert-photo-box
+								img.webinar__expert-photo(src="images/webinar/photo1.jpg")
 							.webinar__expert-description
 								p.webinar__expert-name Петр Соколов
 								p.webinar__expert-job Руководитель
@@ -61,7 +67,7 @@ block content
 							+svg("arrow-right")(class="webinar-card__link-icon")
 					.webinar-card__author
 						.webinar-card__author-photo-box
-							img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+							img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 						span.webinar-card__author-name Петр Соколов
 				// Webinar
 				article.webinar__event-item.webinar-card
@@ -74,7 +80,7 @@ block content
 							+svg("arrow-right")(class="webinar-card__link-icon")
 					.webinar-card__author
 						.webinar-card__author-photo-box
-							img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+							img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 						span.webinar-card__author-name Петр Соколов
 				// Webinar
 				article.webinar__event-item.webinar-card
@@ -87,5 +93,5 @@ block content
 							+svg("arrow-right")(class="webinar-card__link-icon")
 					.webinar-card__author
 						.webinar-card__author-photo-box
-							img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+							img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 						span.webinar-card__author-name Петр Соколов
