--- a/src/webinar2.pug
+++ b/src/webinar2.pug
@@ -24,7 +24,7 @@ block content
 				p.webinar__text Вы так же можете направить интересующие Вас вопросы на почту
 					|
 					|
-					strong webinar@mjr.ru
+					a(href="#section-contacts", data-scroll-to="section-contacts").webinar__form-link форму обратной связи
 					|. Наши эксперты подготовят ответ.
 				.webinar__video-wrapper
 					iframe.webinar__video(width='560', height='315', src='https://www.youtube-nocookie.com/embed/QK4xl5c8w7Y', title='YouTube video player', frameborder='0', allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share', allowfullscreen)
@@ -33,19 +33,25 @@ block content
 					.webinar__expert-grid
 						.webinar__expert
 							.webinar__expert-photo-box
-								img.webinar__expert-photo(src="images/webinar/photo.png")
+								img.webinar__expert-photo(src="images/webinar/photo1.jpg")
 							.webinar__expert-description
 								p.webinar__expert-name Петр Соколов
 								p.webinar__expert-job Руководитель
 						.webinar__expert
 							.webinar__expert-photo-box
-								img.webinar__expert-photo(src="images/webinar/photo.png")
+								img.webinar__expert-photo(src="images/webinar/photo1.jpg")
 							.webinar__expert-description
 								p.webinar__expert-name Петр Соколов
 								p.webinar__expert-job Руководитель
 						.webinar__expert
 							.webinar__expert-photo-box
-								img.webinar__expert-photo(src="images/webinar/photo.png")
+								img.webinar__expert-photo(src="images/webinar/photo1.jpg")
+							.webinar__expert-description
+								p.webinar__expert-name Петр Соколов
+								p.webinar__expert-job Руководитель
+						.webinar__expert
+							.webinar__expert-photo-box
+								img.webinar__expert-photo(src="images/webinar/photo1.jpg")
 							.webinar__expert-description
 								p.webinar__expert-name Петр Соколов
 								p.webinar__expert-job Руководитель
@@ -61,7 +67,7 @@ block content
 							+svg("arrow-right")(class="webinar-card__link-icon")
 					.webinar-card__author
 						.webinar-card__author-photo-box
-							img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+							img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 						span.webinar-card__author-name Петр Соколов
 				// Webinar
 				article.webinar__event-item.webinar-card
@@ -74,7 +80,7 @@ block content
 							+svg("arrow-right")(class="webinar-card__link-icon")
 					.webinar-card__author
 						.webinar-card__author-photo-box
-							img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+							img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 						span.webinar-card__author-name Петр Соколов
 				// Webinar
 				article.webinar__event-item.webinar-card
@@ -87,5 +93,5 @@ block content
 							+svg("arrow-right")(class="webinar-card__link-icon")
 					.webinar-card__author
 						.webinar-card__author-photo-box
-							img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+							img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 						span.webinar-card__author-name Петр Соколов
