--- a/src/webinars.pug
+++ b/src/webinars.pug
@@ -28,9 +28,29 @@ block content
 					p.webinar-card__text На вебинаре эксперты рассказали о практике мультипродуктового оператора в области маркировки товаров, поделились опытом операционной работы и подготовки к новым этапам маркировки (оборудование + расходники, топология склада, ограничения). Слушателям были даны рекомендации по взаимодействию для получения оптимальных условий.
 					a.webinar-card__link(href="#") Подробнее
 						+svg("arrow-right")(class="webinar-card__link-icon")
+					.webinar-card__author.webinar-card__author--list
+						.webinar-card__author-photo-box
+							img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
+						.webinar-card__author-photo-box
+							img.webinar-card__author-photo(src="images/webinar/photo2.jpg", alt)
+						.webinar-card__author-photo-box
+							img.webinar-card__author-photo(src="images/webinar/photo3.jpg", alt)
+						.webinar-card__author-photo-box
+							img.webinar-card__author-photo(src="images/webinar/photo4.jpg", alt)
+						span.webinar-card__author-name 4 ведущих
+					a.webinar-card__register-btn(href="#") Регистрация
+				// Webinar
+				article.webinar-list__item.webinar-card.webinar-card--register
+					time.webinar-card__time 16 Июня 2023 г. в 12:00
+					h2.webinar-card__title Маркировка на
+						br
+						|таможенном складе
+					p.webinar-card__text На вебинаре эксперты рассказали о практике мультипродуктового оператора в области маркировки товаров, поделились опытом операционной работы и подготовки к новым этапам маркировки (оборудование + расходники, топология склада, ограничения). Слушателям были даны рекомендации по взаимодействию для получения оптимальных условий.
+					a.webinar-card__link(href="#") Подробнее
+						+svg("arrow-right")(class="webinar-card__link-icon")
 					.webinar-card__author
 						.webinar-card__author-photo-box
-							img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+							img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 						span.webinar-card__author-name Петр Соколов
 					a.webinar-card__register-btn(href="#") Регистрация
 				// Webinar
@@ -44,21 +64,7 @@ block content
 						+svg("arrow-right")(class="webinar-card__link-icon")
 					.webinar-card__author
 						.webinar-card__author-photo-box
-							img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
-						span.webinar-card__author-name Петр Соколов
-					a.webinar-card__register-btn(href="#") Регистрация
-				// Webinar
-				article.webinar-list__item.webinar-card.webinar-card--register
-					time.webinar-card__time 16 Июня 2023 г. в 12:00
-					h2.webinar-card__title Маркировка на
-						br
-						|таможенном складе
-					p.webinar-card__text На вебинаре эксперты рассказали о практике мультипродуктового оператора в области маркировки товаров, поделились опытом операционной работы и подготовки к новым этапам маркировки (оборудование + расходники, топология склада, ограничения). Слушателям были даны рекомендации по взаимодействию для получения оптимальных условий.
-					a.webinar-card__link(href="#") Подробнее
-						+svg("arrow-right")(class="webinar-card__link-icon")
-					.webinar-card__author
-						.webinar-card__author-photo-box
-							img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+							img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 						span.webinar-card__author-name Петр Соколов
 					a.webinar-card__register-btn(href="#") Регистрация
 	// Section Event list
@@ -81,7 +87,7 @@ block content
 						+svg("arrow-right")(class="webinar-card__link-icon")
 				.webinar-card__author
 					.webinar-card__author-photo-box
-						img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+						img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 					span.webinar-card__author-name Петр Соколов
 			// Webinar
 			article.event-list__item.webinar-card
@@ -94,7 +100,7 @@ block content
 						+svg("arrow-right")(class="webinar-card__link-icon")
 				.webinar-card__author
 					.webinar-card__author-photo-box
-						img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+						img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 					span.webinar-card__author-name Петр Соколов
 			// Webinar
 			article.event-list__item.webinar-card
@@ -107,7 +113,7 @@ block content
 						+svg("arrow-right")(class="webinar-card__link-icon")
 				.webinar-card__author
 					.webinar-card__author-photo-box
-						img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+						img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 					span.webinar-card__author-name Петр Соколов
 			// Webinar
 			article.event-list__item.webinar-card
@@ -120,7 +126,7 @@ block content
 						+svg("arrow-right")(class="webinar-card__link-icon")
 				.webinar-card__author
 					.webinar-card__author-photo-box
-						img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+						img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 					span.webinar-card__author-name Петр Соколов
 			// Webinar
 			article.event-list__item.webinar-card
@@ -133,7 +139,7 @@ block content
 						+svg("arrow-right")(class="webinar-card__link-icon")
 				.webinar-card__author
 					.webinar-card__author-photo-box
-						img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+						img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 					span.webinar-card__author-name Петр Соколов
 			// Webinar
 			article.event-list__item.webinar-card
@@ -146,7 +152,7 @@ block content
 						+svg("arrow-right")(class="webinar-card__link-icon")
 				.webinar-card__author
 					.webinar-card__author-photo-box
-						img.webinar-card__author-photo(src="images/webinar/photo.png", alt)
+						img.webinar-card__author-photo(src="images/webinar/photo1.jpg", alt)
 					span.webinar-card__author-name Петр Соколов
 		.event-list__btn-box
 			button.event-list__btn Показать ещё
