--- a/src/scss/components/sections/_webinar-card.scss
+++ b/src/scss/components/sections/_webinar-card.scss
@@ -107,6 +107,14 @@
 		height: 56px;
 		border-radius: 50%;
 		overflow: hidden;
+
+		.webinar-card__author--list & {
+			box-shadow: 0 0 0 2px $color-white;
+
+			&:not(:first-child) {
+				margin-left: -30px;
+			}
+		}
 	}
 
 	&__author-photo {
