Fix case item bold text

--- a/src/case-item.pug
+++ b/src/case-item.pug
@@ -39,14 +39,16 @@ block content
 		// Panel
 		.section-case-item__panel
 			h3.section-case-item__panel-title Решение
-			p.section-case-item__text Наша компания реализовала для клиента интеграцию со следующими компаниями:
+			p.section-case-item__text
+				strong Наша компания реализовала для клиента интеграцию со следующими компаниями:
 			ul.section-case-item__list
 				li Мэйджор Экспресс
 				li Курьер Сервис Экспресс
 				li СДЕК (возможность реализации выдачи груза через ПВЗ)
 				li DPD (возможность реализации выдачи груза через ПВЗ)
 				li Pony Express
-			p.section-case-item__text Реализовав интеграцию с транспортными компаниями, наши клиенты получают следующие плюсы:
+			p.section-case-item__text
+				strong Реализовав интеграцию с транспортными компаниями, наши клиенты получают следующие плюсы:
 			ul.section-case-item__list
 				li экономия времени своих сотрудников на формирование накладных и передачи документов – по окончанию комплектации заказа, автоматически, заказу присваивается уникальный номер перевозчика (накладная). Номер накладной печатается на отгрузочном стикере. Передача груза в ТК происходит путем считывания ШК накладной с отгрузочного стикера. Никакие доп. документы перевозчика на груз наносить не требуется
 				li экономия времени своих сотрудников на формирование заказов в системе перевозчика для вывоза собранных грузов – по интеграции передается информация по требуемой дате вывоза груза. К указанной дате ТК подает машину нужного объема и забирает подготовленные к отгрузке заказы.
