--- a/css/main.css
+++ b/css/main.css
@@ -7144,8 +7144,7 @@ a {
     margin-bottom: 10px;
     font-family: "Roboto Condensed Medium", sans-serif;
     font-size: 18px;
-    line-height: 24px;
-    font-weight: 900; }
+    line-height: 24px; }
   .section-case-item__list {
     padding-left: 0;
     margin-top: 0;
