Update contacts form (career), update footer

--- a/src/career-item.pug
+++ b/src/career-item.pug
@@ -11,6 +11,7 @@ append vars
 		link.icon16x16 = "favicons/favicon-16x16.png"
 		link.icon32x32 = "favicons/favicon-32x32.png"
 		isCareer = true
+		showContactsWhite = true
 
 block content
 	+breadcrumb(['Главная'], 'Вакансии')(class="container")
