--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -11,42 +11,38 @@ footer.footer
 					li.footer__nav-elem
 						a.footer__nav-link(href="#") Telecom
 					li.footer__nav-elem
-						a.footer__nav-link(href="#") Helthcare
+						a.footer__nav-link(href="#") Healthcare
 					li.footer__nav-elem
 						a.footer__nav-link(href="#") Автомотив
 					li.footer__nav-elem
-						a.footer__nav-link(href="#") POSM маркетинг
+						a.footer__nav-link(href="#") POSM
 					li.footer__nav-elem
 						a.footer__nav-link(href="#") FMCG
 				ul.footer__logo-list.footer__logo-list--desktop
 					li.footer__logo-list-elem
 						a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
-							img.footer__logo-list-img(src="images/common/logo-major-squares.svg", alt="Major")
+							img.footer__logo-list-img(src="images/common/logo-t.png", alt="Major")
 					li.footer__logo-list-elem
 						a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
-							img.footer__logo-list-img(src="images/common/logo-major-e.png", alt="Major")
+							img.footer__logo-list-img(src="images/common/logo-m.png", alt="Major")
 			// Nav col
 			.footer__col
 				p.footer__nav-title Услуги
 				ul.footer__nav-list
 					li.footer__nav-elem
-						a.footer__nav-link(href="#") Упаковка
-					li.footer__nav-elem
-						a.footer__nav-link(href="#") Фуллфилмент
-					li.footer__nav-elem
 						a.footer__nav-link(href="#") Ответственное хранение
 					li.footer__nav-elem
-						a.footer__nav-link(href="#") Таможенный склад
+						a.footer__nav-link(href="#") Складская обработка
+					li.footer__nav-elem
+						a.footer__nav-link(href="#") Копакинг
+					li.footer__nav-elem
+						a.footer__nav-link(href="#") Производственная логистика
+					li.footer__nav-elem
+						a.footer__nav-link(href="#") Фулфилмент
+					li.footer__nav-elem
+						a.footer__nav-link(href="#") Маркировка Честный знак
 					li.footer__nav-elem
 						a.footer__nav-link(href="#") Кросс-докинг
-					li.footer__nav-elem
-						a.footer__nav-link(href="#") Еще услуга
-					li.footer__nav-elem
-						a.footer__nav-link(href="#") Еще название услуги
-					li.footer__nav-elem
-						a.footer__nav-link(href="#") Еще название услуги
-					li.footer__nav-elem
-						a.footer__nav-link(href="#") Еще название услуги
 			// Nav col
 			.footer__col
 				p.footer__nav-title Major Terminal
@@ -56,24 +52,24 @@ footer.footer
 					li.footer__nav-elem
 						a.footer__nav-link(href="#") Кейсы
 					li.footer__nav-elem
-						a.footer__nav-link(href="#") Пресс-релизы
+						a.footer__nav-link(href="#") Новости
 					li.footer__nav-elem
-						a.footer__nav-link(href="#") Наши склады
+						a.footer__nav-link(href="#") Терминалы
 					li.footer__nav-elem
 						a.footer__nav-link(href="#") Контакты
 					li.footer__nav-elem
-						a.footer__nav-link(href="#") Преимущества
+						a.footer__nav-link(href="#") Вебинары
 					li.footer__nav-elem
-						a.footer__nav-link(href="#") Наши вакансии
+						a.footer__nav-link(href="#") Карьера
 			// Contact col
 			.footer__col
 				a.footer__logo-link(href="/")
 					img.footer__logo(src="images/common/logo-major-terminal.svg", alt="Major")
 				.footer__links-box
 					a.footer__link(href="tel:84957376006") 8 (495) 737 60 06
-					a.footer__link(href="mailto:info@major-terminal.ru") info@major-terminal.ru
+					a.footer__link(href="mailto:sales_mt@mjr.ru") sales_mt@mjr.ru
 				a.footer__link-contacts(href="/") Связаться с нами
-				.footer__social-box
+				//.footer__social-box
 					.footer__social-wrapper
 						p.footer__text Мы в социальных сетях
 						ul.footer__social.social
