Fix footer logos

--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -69,8 +69,8 @@ footer.footer
 					a.footer__link(href="tel:84957376006") 8 (495) 737 60 06
 					a.footer__link(href="mailto:sales_mt@mjr.ru") sales_mt@mjr.ru
 				a.footer__link-contacts(href="/") Связаться с нами
-				//.footer__social-box
-					.footer__social-wrapper
+				.footer__social-box
+					//-.footer__social-wrapper
 						p.footer__text Мы в социальных сетях
 						ul.footer__social.social
 							li.social__elem
@@ -82,10 +82,10 @@ footer.footer
 					ul.footer__logo-list.footer__logo-list--mobile
 						li.footer__logo-list-elem
 							a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
-								img.footer__logo-list-img(src="images/common/logo-major-squares.svg", alt="Major")
+								img.footer__logo-list-img(src="images/common/logo-t.png", alt="Major")
 						li.footer__logo-list-elem
 							a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
-								img.footer__logo-list-img(src="images/common/logo-major-e.png", alt="Major")
+								img.footer__logo-list-img(src="images/common/logo-m.png", alt="Major")
 		// Copyright
 		.footer__copyright
 			.footer__copyright-col
