--- a/src/scss/components/blocks/_footer.scss
+++ b/src/scss/components/blocks/_footer.scss
@@ -197,7 +197,7 @@
 
 	&__logo-list {
 		align-items: center;
-		margin: 0 -18px;
+		margin: 60px -18px 0;
 		flex-shrink: 0;
 		display: flex;
 		list-style-type: none;
@@ -208,12 +208,12 @@
 
 			@media (min-width: $breakpoint-desktop) {
 				display: flex;
-				margin-top: auto;
 			}
 		}
 
 		&--mobile {
 			display: flex;
+			margin-top: 7px;
 
 			@media (min-width: $breakpoint-desktop) {
 				display: none;
